samples/_failures_safe/1761376930_6033f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea701b22.c: In function ‘main’:
./samples/SAFE/__tmp_ea701b22.c:135:5: error: expected identifier or ‘(’ at end of input
  135 |     int
      |     ^~~
./samples/SAFE/__tmp_ea701b22.c:135:5: error: expected declaration or statement at end of input
